# slopy.py

./: help.txt  main.py  pyproject.toml  requirements.txt  webserver.py
cogs/: Error.py  Guild.py  Ttt.py  Wanted.py  dm.py  economy.py  music.  mute.py  userinfo.py
